@@ -1,0 +1,11 @@
+[[!comment format=mdwn
+ username="joey"
+ subject="""comment 3"""
+ date="2020-12-15T16:16:21Z"
+ content="""
+Hmm, yes preferred content expressions on windows ought
+to let `/` be used and still match on `\`. (And vice-versa, although then
+the preferred content expression is windows-specific.)
+
+I've implemented that now.
+"""]]
